update neovim plugin - outline

--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -1,12 +1,10 @@
 {
-    "completion.autoRequire": false,
-    "diagnostics.globals": [
-        "dasda",
-        "transparent"
-    ],
-    "diagnostics.disable": [
-        "param-type-mismatch",
-        "inject-field",
-        "missing-fields"
-    ]
+  "completion.autoRequire": false,
+  "diagnostics.globals": ["dasda", "transparent"],
+  "diagnostics.disable": [
+    "param-type-mismatch",
+    "inject-field",
+    "duplicate-set-field"
+  ]
 }
+
