--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,7 @@ setw -g mode-keys vi
 set -g mode-keys vi
 set -g status-keys vi
 
+set -g default-terminal "${TERM}"
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -80,8 +81,8 @@ unbind %
 bind '\' split-window -h
 
 # window navigation
-bind -r p previous-window
-bind -r n next-window
+bind -r H previous-window
+bind -r L next-window
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 bind Tab last-window
@@ -138,12 +139,12 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 TMUX_FZF_LAUNCH_KEY="C-f"
 TMUX_FZF_OPTIONS="-p -w 80% -h 80% -m"
 TMUX_FZF_ORDER="session|window|pane|clipboard|process"
-set -g @t-fzf-prompt '  '
+set -g @t-fzf-prompt '   '
+# set -g @t-fzf-prompt '  '
 
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
@@ -164,12 +165,14 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "session user cpu date_time"
+# set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_modules_right "session cpu date_time"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-
 set -g @catppuccin_directory_text "#{pane_current_path}"
+# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 run '~/.tmux/plugins/tpm/tpm'
