--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -1,5 +1,6 @@
 {
   "completion.autoRequire": false,
+  "workspace.checkThirdParty": false,
   "diagnostics.globals": ["dasda", "transparent"],
   "diagnostics.disable": [
     "param-type-mismatch",
@@ -7,4 +8,3 @@
     "duplicate-set-field"
   ]
 }
-
