[#neovim] update plugin config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,73 +1,227 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-# Fonts
-font_family      Hack Nerd Font
+# --- Fonts ---
+
+font_family      Fira Code
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 16
+font_size 15
 
-adjust_line_height  0
-adjust_column_width 0
+modify_font  underline_position     5
+modify_font  strikethrough_position 5
+# modify_font  cell_height 130%
+# modify_font  cell_height 160%
 
-# Cursor
-cursor_shape block
-scrollback_lines 2000
-cursor_blink_interval 500
+# https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points
+# Seti-UI + Custom
+symbol_map U+E5FA-U+E6AC                                Symbols Nerd Font
+# Devicons
+symbol_map U+E700-U+E7C5                                Symbols Nerd Font
+# Font Awesome
+symbol_map U+F000-U+F2E0                                Symbols Nerd Font
+# Font Awesome Extension
+symbol_map U+E200-U+E2A9                                Symbols Nerd Font
+# Material Design Icons
+symbol_map U+F0001-U+F1AF0                              Symbols Nerd Font
+# Weather
+symbol_map U+E300-U+E3E3                                Symbols Nerd Font
+# Octicons
+symbol_map U+F400-U+F532,U+2665,U+26A1                  Symbols Nerd Font
+# [Powerline Symbols]
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3                  Symbols Nerd Font
+# Powerline Extra Symbols
+symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CA,U+E0CC-U+E0D4    Symbols Nerd Font
+# IEC Power Symbols
+symbol_map U+23FB-U+23FE,U+2B58                         Symbols Nerd Font
+# Font Logos (Formerly Font Linux)
+symbol_map U+F300-U+F32F                                Symbols Nerd Font
+# Pomicons
+symbol_map U+E000-U+E00A                                Symbols Nerd Font
+# Codicons
+symbol_map U+EA60-U+EBEB                                Symbols Nerd Font
 
-background_opacity 0.9
-dim_opacity 0.75
 
-# URL
-# url_color #0087BD
+# --- Colorsceheme ---
+
+include themes/catppuccin/mocha.conf
+# include themes/catppuccin/latte.conf
+# include themes/everforest.conf
+
+background_opacity 0.85
+background_blur 15
+
+
+# --- Scrollback ---
+
+scrollback_lines -1
+scrollback_fill_enlarged_window yes
+scrollback_indicator_opacity 0.8
+
+
+# --- Cursor ---
+
+cursor_text_color #b4befe
+cursor_shape beam
+cursor_beam_thickness 1.5
+# cursor_blink_interval 500
+cursor_blink_interval -1
+
+
+# --- Mouse ---
+
+url_color #0087bd
 url_style curly
+url_prefixes file ftp ftps git http https mailto sftp ssh
 open_url_with default
+detect_urls yes
+paste_actions quote-urls-at-prompt,confirm
+underline_hyperlinks hover
+strip_trailing_spaces always
+select_by_word_characters @-./_~?&=%+#
 
-map kitty_mod+e kitten hints
+mouse_map ctrl+alt+left press ungrabbed,grabbed mouse_click_url
 
-# Mappings
-map cmd+c        copy_to_clipboard
-map cmd+v        paste_from_clipboard
-map shift+insert paste_from_clipboard
-map cmd+j next_tab
-map cmd+k previous_tab
-mouse_map ctrl+left press ungrabbed,grabbed mouse_click_url
 
-copy_on_select yes
+# --- Bells ---
 
-# Tab
+enable_audio_bell no
+window_alert_on_bell yes
+
+
+# --- Window layout ---
+
+remember_window_size  no
+initial_window_width  1080
+initial_window_height 720
+window_border_width 0.5pt
+window_padding_width 1
+enabled_layouts *
+
+# --- Tab bar ---
+
+tab_bar_style powerline
+tab_powerline_style round
 tab_bar_edge top
 tab_bar_margin_width 0.0
 tab_bar_style fade
 tab_fade 0.25 0.5 0.75 1
 tab_separator " ┇"
-# active_tab_foreground   #000
-# active_tab_background   #889
 active_tab_font_style   bold-italic
-# inactive_tab_foreground #888
-# inactive_tab_background #333
 inactive_tab_font_style normal
 
-# Window
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
-window_border_width 2.0
-window_padding_width 8.0
-adjust_column_width -1
 
-# Bells
-enable_audio_bell no
+# --- Advanced ---
 
-# System
-# macos_titlebar_color system
-macos_hide_titlebar yes
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty_term
+# remote_control_password "" kitten
+
+
+# --- macOS specific tweaks ---
+
 macos_option_as_alt yes
+macos_show_window_title_in window
+macos_colorspace displayp3
+text_composition_strategy 1.2 20
+macos_hide_titlebar yes
 macos_hide_from_tasks no
 macos_quit_when_last_window_closed yes
 macos_window_resizable yes
 
-BEGIN_KITTY_THEME
-Catppuccin-Macchiato
-# include current-theme.conf
-END_KITTY_THEME
+
+# --- Keyboard shortcuts ---
+
+clear_all_shortcuts yes
+
+# --- Special key ---
+
+# map ctrl+i kitten extensions/keymap.py "C-i"
+
+# Edit current command via neovim, specific to zsh
+map ctrl+, send_text normal,application  \x1b[44;5u
+
+
+# --- Clipboard ---
+
+map cmd+c        copy_to_clipboard
+map cmd+v        paste_from_clipboard
+map cmd+shift+v  paste_from_selection
+
+
+# --- Scrolling ---
+
+map cmd+alt+k  combine : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up
+map cmd+alt+j  combine : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down
+
+map cmd+/        scroll_to_prompt -1
+map cmd+shift+/  scroll_to_prompt 1
+
+map cmd+alt+/  show_last_command_output
+
+
+# --- Window management ---
+
+map cmd+k         kitten extensions/window.py +split top
+map cmd+j         kitten extensions/window.py +split bottom
+map cmd+h         kitten extensions/window.py +split left
+map cmd+l         kitten extensions/window.py +split right
+map cmd+w         kitten extensions/window.py -close
+
+map ctrl+k        kitten extensions/window.py -jump top
+map ctrl+j        kitten extensions/window.py -jump bottom
+map ctrl+h        kitten extensions/window.py -jump left
+map ctrl+l        kitten extensions/window.py -jump right
+map alt+k         kitten extensions/window.py -resize top
+map alt+j         kitten extensions/window.py -resize bottom
+map alt+h         kitten extensions/window.py -resize left
+map alt+l         kitten extensions/window.py -resize right
+map ctrl+alt+k    kitten extensions/window.py -move top
+map ctrl+alt+j    kitten extensions/window.py -move bottom
+map ctrl+alt+h    kitten extensions/window.py -move left
+map ctrl+alt+l    kitten extensions/window.py -move right
+
+map cmd+enter toggle_layout stack
+
+
+# --- Tab management ---
+
+map cmd+t        new_tab
+map cmd+shift+w  close_tab
+map cmd+shift+t  set_tab_title
+
+map alt+[      previous_tab
+map alt+]      next_tab
+map alt+shift+]  move_tab_forward
+map alt+shift+[  move_tab_backward
+
+map alt+1  goto_tab 1
+map alt+2  goto_tab 2
+map alt+3  goto_tab 3
+map alt+4  goto_tab 4
+map alt+5  goto_tab 5
+map alt+6  goto_tab 6
+
+
+# --- Adjust font sizes ---
+
+map cmd+equal  change_font_size all +1.0
+map cmd+minus  change_font_size all -1.0
+map cmd+0      change_font_size all 0
+
+
+# --- Select and act on visible text ---
+
+map cmd+o        open_url_with_hints
+map cmd+q        kitten extensions/window.py -quit
+map cmd+p        kitten hints --type path --program -
+map cmd+shift+p  kitten hints --type path
+
+
+# --- Miscellaneous ---
+
+map cmd+backspace  send_text all \u17
+# map cmd+s          kitten extensions/keymap.py "S-s"
+map cmd+r          clear_terminal to_cursor active
+map cmd+f          combine : show_scrollback : send_text normal,application /
+map alt+m          toggle_maximized
