--- a/kitty/themes/catppuccin/macchiato.conf
+++ b/kitty/themes/catppuccin/macchiato.conf
@@ -1,9 +1,9 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Macchiato
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Catppuccin Kitty Macchiato
+## author:   Catppuccin Org
 ## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/macchiato.conf
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/macchiato.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
 
@@ -27,8 +27,8 @@ inactive_border_color   #6E738D
 bell_border_color       #EED49F
 
 # OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+wayland_titlebar_color  #24273A
+macos_titlebar_color    #24273A
 
 # Tab bar colors
 active_tab_foreground   #181926
