[#kitty] remove all custom keymaps for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
+#
+# references: https://github.com/sxyazi/dotfiles/blob/main/kitty/kitty.conf
 
 # --- Fonts ---
 
@@ -86,7 +88,7 @@ mouse_map ctrl+alt+left press ungrabbed,grabbed mouse_click_url
 # --- Bells ---
 
 enable_audio_bell no
-window_alert_on_bell yes
+window_alert_on_bell no
 
 
 # --- Window layout ---
@@ -96,7 +98,10 @@ initial_window_width  1080
 initial_window_height 720
 window_border_width 0.5pt
 window_padding_width 1
-enabled_layouts *
+window_margin_width 0
+placement_strategy center
+active_border_color #cba6f7
+
 
 # --- Tab bar ---
 
@@ -115,113 +120,20 @@ inactive_tab_font_style normal
 
 allow_remote_control socket-only
 listen_on unix:/tmp/kitty_term
+shell_integration enabled
 # remote_control_password "" kitten
 
 
 # --- macOS specific tweaks ---
 
 macos_option_as_alt yes
+macos_quit_when_last_window_closed yes
 macos_show_window_title_in window
 macos_colorspace displayp3
 text_composition_strategy 1.2 20
-macos_hide_titlebar yes
-macos_hide_from_tasks no
-macos_quit_when_last_window_closed yes
-macos_window_resizable yes
+# macos_window_resizable yes
 
 
 # --- Keyboard shortcuts ---
 
 clear_all_shortcuts yes
-
-# --- Special key ---
-
-# map ctrl+i kitten extensions/keymap.py "C-i"
-
-# Edit current command via neovim, specific to zsh
-map ctrl+, send_text normal,application  \x1b[44;5u
-
-
-# --- Clipboard ---
-
-map cmd+c        copy_to_clipboard
-map cmd+v        paste_from_clipboard
-map cmd+shift+v  paste_from_selection
-
-
-# --- Scrolling ---
-
-map cmd+alt+k  combine : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up
-map cmd+alt+j  combine : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down
-
-map cmd+/        scroll_to_prompt -1
-map cmd+shift+/  scroll_to_prompt 1
-
-map cmd+alt+/  show_last_command_output
-
-
-# --- Window management ---
-
-map cmd+k         kitten extensions/window.py +split top
-map cmd+j         kitten extensions/window.py +split bottom
-map cmd+h         kitten extensions/window.py +split left
-map cmd+l         kitten extensions/window.py +split right
-map cmd+w         kitten extensions/window.py -close
-
-map ctrl+k        kitten extensions/window.py -jump top
-map ctrl+j        kitten extensions/window.py -jump bottom
-map ctrl+h        kitten extensions/window.py -jump left
-map ctrl+l        kitten extensions/window.py -jump right
-map alt+k         kitten extensions/window.py -resize top
-map alt+j         kitten extensions/window.py -resize bottom
-map alt+h         kitten extensions/window.py -resize left
-map alt+l         kitten extensions/window.py -resize right
-map ctrl+alt+k    kitten extensions/window.py -move top
-map ctrl+alt+j    kitten extensions/window.py -move bottom
-map ctrl+alt+h    kitten extensions/window.py -move left
-map ctrl+alt+l    kitten extensions/window.py -move right
-
-map cmd+enter toggle_layout stack
-
-
-# --- Tab management ---
-
-map cmd+t        new_tab
-map cmd+shift+w  close_tab
-map cmd+shift+t  set_tab_title
-
-map alt+[      previous_tab
-map alt+]      next_tab
-map alt+shift+]  move_tab_forward
-map alt+shift+[  move_tab_backward
-
-map alt+1  goto_tab 1
-map alt+2  goto_tab 2
-map alt+3  goto_tab 3
-map alt+4  goto_tab 4
-map alt+5  goto_tab 5
-map alt+6  goto_tab 6
-
-
-# --- Adjust font sizes ---
-
-map cmd+equal  change_font_size all +1.0
-map cmd+minus  change_font_size all -1.0
-map cmd+0      change_font_size all 0
-
-
-# --- Select and act on visible text ---
-
-map cmd+o        open_url_with_hints
-map cmd+q        kitten extensions/window.py -quit
-map cmd+p        kitten hints --type path --program -
-map cmd+shift+p  kitten hints --type path
-
-
-# --- Miscellaneous ---
-
-map cmd+backspace  send_text all \u17
-# map cmd+s          kitten extensions/keymap.py "S-s"
-map cmd+r          clear_terminal to_cursor active
-map cmd+f          combine : show_scrollback : send_text normal,application /
-map alt+m          toggle_maximized
