--- a/sesh/sesh.toml
+++ b/sesh/sesh.toml
@@ -28,7 +28,7 @@ startup_command = "yazi"
 
 [[session]]
 name = "Notes 📝"
-path = "~/Notes"
+path = "~/Dev/notes"
 startup_command = "yazi"
 
 [[session]]
