[#tmux] update tmux sesh keymap config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -111,12 +111,12 @@ bind -r m resize-pane -Z
 bind -r x kill-pane
 
 # sesh
-bind-key "K" display-popup -E -w 60% "sesh connect \"$(
+unbind f
+bind-key f display-popup -E -w 60% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
-unbind f
-bind-key f run-shell "sesh connect \"$(
+bind-key "K" run-shell "sesh connect \"$(
 	sesh list | fzf-tmux -p 75%,80% \
 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
 		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
