--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,6 +17,8 @@ set -g status-keys vi
 set -g default-terminal "${TERM}"
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # setw -g monitor-activity on
 set -g visual-activity on
