[#tmux] update sessionx plugin configs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -142,6 +142,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'omerxx/tmux-sessionx'
 
 TMUX_FZF_LAUNCH_KEY="C-f"
 TMUX_FZF_OPTIONS="-p -w 80% -h 80% -m"
@@ -153,6 +154,13 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 set -g @continuum-restore 'off'
+
+# sessionx
+# set -g @sessionx-bind '0'
+# set -g @sessionx-x-path '~/Github/dotfiles'
+# set -g @sessionx-window-height '85%'
+# set -g @sessionx-window-width '75%'
+# set -g @sessionx-zoxide-mode 'on'
 
 # colorscheme
 set -g @catppuccin_flavour 'mocha'
