--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,30 +1,89 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "display": {
+    "separator": " ➜ ",
+    "color": "white"
+  },
   "modules": [
-    "title",
-    "separator",
-    "os",
-    "host",
-    "kernel",
-    "uptime",
-    "packages",
-    "shell",
-    "display",
-    "de",
-    "wm",
-    "theme",
-    "icons",
-    "terminal",
-    "terminalfont",
-    "terminalsize",
-    "cpu",
-    "gpu",
-    "memory",
-    "disk",
-    "localip",
-    "wifi",
-    "battery",
+    {
+      "type": "custom",
+      "format": "┌──────────── Hardware Information ────────────┐"
+    },
+    {
+      "type": "cpu",
+      "key": "   CPU",
+      "keyColor": "blue"
+    },
+    {
+      "type": "board",
+      "key": "   Board",
+      "keyColor": "magenta"
+    },
+    {
+      "type": "gpu",
+      "format": "{2} {3}",
+      "key": "  󰛇 GPU",
+      "keyColor": "yellow"
+    },
+    {
+      "type": "memory",
+      "key": "   Memory",
+      "keyColor": "green"
+    },
+    {
+      "type": "display",
+      "key": "  󰍹 Display",
+      "keyColor": "cyan",
+      "compactType": "original"
+    },
+    {
+      "type": "custom",
+      "format": "├──────────── Software Information ────────────┤"
+    },
+    {
+      "type": "os",
+      "key": "   OS",
+      "keyColor": "cyan"
+    },
+    {
+      "type": "kernel",
+      "key": "   Kernel",
+      "keyColor": "red"
+    },
+    {
+      "type": "shell",
+      "key": "   Shell",
+      "keyColor": "magenta"
+    },
+    {
+      "type": "wm",
+      "key": "   WM",
+      "keyColor": "blue"
+    },
+    {
+      "type": "terminal",
+      "key": "   Terminal",
+      "keyColor": "yellow"
+    },
+    {
+      "type": "packages",
+      "key": "   Packages",
+      "keyColor": "green"
+    },
+    {
+      "type": "uptime",
+      "key": "  󱫐 Uptime",
+      "keyColor": "white"
+    },
+    {
+      "type": "custom",
+      "format": "└──────────────────────────────────────────────┘"
+    },
     "break",
-    "colors"
+    {
+      "type": "colors",
+      "symbol": "block",
+      "paddingLeft": 12
+    }
   ]
 }
