--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -163,13 +163,13 @@ set -g @continuum-restore 'off'
 # set -g @sessionx-zoxide-mode 'on'
 
 # colorscheme
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavor 'mocha'
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_status_enable "no"
+set -g @catppuccin_window_status "icon"
 
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
