[#server] update scripts and dotfiles

--- a/server/.tmux.conf
+++ b/server/.tmux.conf
@@ -1,11 +1,81 @@
+# general
 set -g mouse on
+set -s focus-events on
+set -g set-clipboard on
+setw -g xterm-keys on
+set -sg escape-time 10
+set -sg repeat-time 300
+set -s extended-keys on
+set -g history-limit 50000
+set -g bell-action none
+set -g detach-on-destroy off
 
-# Start counting pane and window number at 1
+setw -g mode-keys vi
+set -g mode-keys vi
+set -g status-keys vi
+
+# display
 set -g base-index 1
 setw -g pane-base-index 1
+setw -g automatic-rename on
+set -g renumber-windows on
+set -g set-titles on
+set -g set-titles-string "#T"
+set -g status-interval 10
 
 # Disable automatic renaming
 set-option -wg automatic-rename off
 
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# keymaps
+set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
+
+# session
+bind R command-prompt "rename-session %%"
+bind q confirm-before -p "kill-session #S? (y/n)" kill-session
+bind e new-window -n "~/.tmux.conf" "EDITOR=\${EDITOR//mvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\""
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
+
+# copy mode
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# vim mode
+bind Escape copy-mode
+bind -T copy-mode-vi k send -X cursor-up
+bind -T copy-mode-vi K send -N 5 -X cursor-up
+bind -T copy-mode-vi j send -X cursor-down
+bind -T copy-mode-vi J send -N 5 -X cursor-down
+bind -T copy-mode-vi h send -X cursor-left
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi l send -X cursor-right
+bind -T copy-mode-vi L send -X end-of-line
+
+# split window
+unbind '"'
+bind '-' split-window -v
+
+unbind %
+bind '\' split-window -h
+
+# window navigation
+bind -r H previous-window
+bind -r L next-window
+bind -r < swap-window -d -t -1
+bind -r > swap-window -d -t +1
+bind Tab last-window
+
+# pane navigation
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind -n M-h resize-pane -L 5
+bind -n M-j resize-pane -D 5
+bind -n M-k resize-pane -U 5
+bind -n M-l resize-pane -R 5
+bind -r m resize-pane -Z
+bind -r x kill-paneind -r C-l select-window -t :+
