--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,8 @@ set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 # set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
 
 # setw -g monitor-activity on
 set -g visual-activity on
@@ -140,9 +142,13 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'omerxx/tmux-sessionx'
+# colorscheme
+# set -g @plugin 'Nybkox/tmux-kanagawa'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 TMUX_FZF_LAUNCH_KEY="C-f"
 TMUX_FZF_OPTIONS="-p -w 80% -h 80% -m"
@@ -152,38 +158,40 @@ set -g @t-fzf-prompt '   '
 
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-
 set -g @continuum-restore 'off'
-
-# sessionx
 # set -g @sessionx-bind '0'
 # set -g @sessionx-x-path '~/Github/dotfiles'
 # set -g @sessionx-window-height '85%'
 # set -g @sessionx-window-width '75%'
 # set -g @sessionx-zoxide-mode 'on'
-
-# colorscheme
-set -g @catppuccin_flavor 'mocha'
-
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_status "icon"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-# set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_status_modules_right "session cpu date_time"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+# set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_status_enable "no"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W"
+# set -g @catppuccin_status_modules_right "session user cpu date_time"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{pane_current_path}"
+# set -g @kanagawa-theme 'kanagawa' # lotus dragon kanagawa
+# set -g @kanagawa-ignore-window-colors true
+set -g @tokyo-night-tmux_theme "storm"
+set -g @tokyo-night-tmux_show_battery_widget 1
+set -g @tokyo-night-tmux_show_datetime 1
+set -g @tokyo-night-tmux_show_git 1
+set -g @tokyo-night-tmux_show_wbg 1
+set -g @tokyo-night-tmux_show_music 0
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_path_format relative
+set -g @tokyo-night-tmux_window_id_style hide
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 run '~/.tmux/plugins/tpm/tpm'
