--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,8 +1,8 @@
-import = [
+general.import = [
     "~/.config/alacritty/themes/themes/catppuccin_mocha.toml"
 ]
 
-live_config_reload = true
+general.live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
