--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -56,6 +56,9 @@ rules = [
 
 [plugin]
 prepend_previewers = [
-	{ mime = "audio/*", run = "exifaudio" },
-  { name = "*.md", run = "glow" },
+    { name = "*.csv", run = "rich-preview"}, # for csv files
+    { name = "*.md", run = "rich-preview" }, # for markdown (.md) files
+    { name = "*.rst", run = "rich-preview"}, # for restructured text (.rst) files
+    { name = "*.ipynb", run = "rich-preview"}, # for jupyter notebooks (.ipynb)
+    { name = "*.json", run = "rich-preview"}, # for json (.json) files
 ]
